Some cleanup of the repo

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ fit_*/*Record.RData
 fit_*/parameter_estimates.RData
 QQ_Fn
 simulation_progress.txt
-
+convergence_progress.txt
+testing
 .Rproj.user
