Rework pcod example and use that to get prior for ln_H_input

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ mcmc_*
 fit_*
 resolution_tests
 simulations
+sensitivities/pcod
 breakpoint_tests/breakpoints*
 sensitivities/fit_*
 sensitivities/kappascale_*
