Update catchability: defaults, options, tests

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ sensitivities/anisopcodfits
 sensitivities/kappascale
 sensitivities/spatialconfig
 sensitivities/temporal
+sensitivities/catchability*
