Setup resolution test to run on VM

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ sensitivities/kappascale
 sensitivities/spatialconfig
 sensitivities/temporal
 sensitivities/catchability*
+sensitivities/resolution
